updated header and body

--- a/index.html
+++ b/index.html
@@ -10,9 +10,8 @@
 
 <body>
     <header>
-        <section class="nameplate">
-            <h1>Alex Brown</h1>
-        </section>
+            <h1 id="nameplate">Alex Brown</h1>
+            <img src="./assets/images/photo.jpg">
         <nav>
             <ul>
                 <li><a href="#about-me">About Me</a></li>
@@ -23,7 +22,8 @@
         </nav>
     </header>
 
-    <main>
+    <main clas="main">
+
         <section id="about-me">
             <h2>About Me</h2>
             <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
