added second card

--- a/index.html
+++ b/index.html
@@ -46,8 +46,27 @@
                 <img src="./assets/images/horiseon_ss.JPG">
                 </a>
             </article>
+            <article class="card">
+                <a href="https://abrowncownow.github.io/prework-study-guide/">
+                <div><h3>Prework Study Guide</h3>
+                    <p>HTML & CSS</p></div>
+                <img src="./assets/images/prework_ss.JPG">
+                </a>
+            </article>
+
+
+
+
+
+
+
+
+
+
+
             </section>
             <br>
+
         <aside>
             <h2>Contact</h2>
         </aside>
