About Me completed. Box shadows added. CSS commented

--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
             <h2>About Me</h2>
         </aside>
             <section id="about-me">
-            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
+            <p><strong><i>"Jack of all trades but master of none, is still better than the master of one"</i></strong></p>
             <br>
-            <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar. The Big Oxmox advised her not to do so, because there were thousands of bad Commas, wild Question Marks and devious Semikoli, but the Little Blind Text didn’t listen. She packed her seven versalia, put her initial into the belt and made herself on the way. When she reached the first hills of the Italic Mountains, she had a last view back on the skyline of her hometown Bookmarksgrove, the headline of Alphabet Village and the subline of her own road, the Line Lane. Pityful a rethoric question ran over her cheek, then</p><br>
+            <p>Father of three kids. Army Veteran. Analyst. Strategist. Alliance leader. Actor. Pianist.  Philosopher. IT wiz. And now full-stack developer extroidinaire! I am enthusiatic about solving complex problems with outside-the-box approaches. I am currently seeking part or full-time full-stack development work (entry/junior). I'm also interested in helping you with your web project!</p><br>
         </section>
             
        <aside>
@@ -53,14 +53,20 @@
                 <img src="./assets/images/prework_ss.JPG">
                 </a>
             </article>
-
-
-
-
-
-
-
-
+            <article class="card">
+                <a href="https://forms.gle/CY2Ya9eHLLErQKP28">
+                <div><h3>Future Project</h3>
+                    <p>HTML, CSS, JS</p></div>
+                <img src="./assets/images/yph.JPG">
+                </a>
+            </article>
+            <article class="card">
+                <a href="https://forms.gle/CY2Ya9eHLLErQKP28">
+                <div><h3>Future Project</h3>
+                    <p>HTML, CSS, JS</p></div>
+                <img src="./assets/images/yph.JPG">
+                </a>
+            </article>
 
 
 
@@ -83,6 +89,7 @@
             <h2>Resume</h2>
         </aside>
         <section id="resume">
+            <!-- link to pdf resume -->
             <iframe src="./assets/images/2022 Resume.pdf" width="800" Height="1024"></iframe>
 
         </section>
