final HTML and CSS edits

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <section id="about-me">
             <p><strong><i>"Jack of all trades but master of none, is still better than the master of one"</i></strong></p>
             <br>
-            <p>Father of three kids. Army Veteran. Analyst. Strategist. Alliance leader. Actor. Pianist.  Philosopher. IT wiz. And now full-stack developer extroidinaire! I am enthusiatic about solving complex problems with outside-the-box approaches. I am currently seeking part or full-time full-stack development work (entry/junior). I'm also interested in helping you with your web project!</p><br>
+            <p>Father of three. Army Veteran. Analyst. Strategist. Alliance leader. Actor. Pianist.  Philosopher. IT wiz. And now full-stack developer extroidinaire! I am enthusiatic about solving complex problems with outside-the-box approaches. I am currently seeking part or full-time full-stack development work (entry/junior). I'm also interested in helping you with your web project!</p><br>
         </section>
             
        <aside>
