added Javascript Card

--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
                 </a>
             </article>
             <article class="card">
-                <a href="https://forms.gle/CY2Ya9eHLLErQKP28">
-                <div><h3>Future Project</h3>
-                    <p>HTML, CSS, JS</p></div>
-                <img src="./assets/images/yph.JPG">
+                <a href="https://abrowncownow.github.io/RPS/">
+                <div><h3>Rock Paper Scissors</h3>
+                    <p>JavaScript</p></div>
+                <img src="./assets/images/RPS_ss.JPG">
                 </a>
             </article>
             <article class="card">
