--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
        <aside>
             <h2>Work</h2>
        </aside>
-            <section class="work">
+            <section id= "work" class="work">
             
             <article id="first-card" class="card">
                 <a href="https://github.com/abrowncownow/horiseon-code-refactor">
