added Password Gen

--- a/index.html
+++ b/index.html
@@ -61,6 +61,13 @@
                 </a>
             </article>
             <article class="card">
+                <a href="https://abrowncownow.github.io/pass-gen/">
+                <div><h3>Password Generator</h3>
+                    <p>Javascript</p></div>
+                <img src="./assets/images/passgen.JPG">
+                </a>
+            </article>
+            <article class="card">
                 <a href="https://forms.gle/CY2Ya9eHLLErQKP28">
                 <div><h3>Future Project</h3>
                     <p>HTML, CSS, JS</p></div>
