--- a/index.html
+++ b/index.html
@@ -40,19 +40,13 @@
             <section id= "work" class="work">
             
             <article id="first-card" class="card">
-                <a href="https://github.com/abrowncownow/horiseon-code-refactor">
-                <div><h3>Horiseon Refactor</h3>
-                    <p>HTML & CSS</p></div>
-                <img src="./assets/images/horiseon_ss.JPG">
+                <a href="https://abrowncownow.github.io/composer-quiz/">
+                <div><h3>Composer Quiz</h3>
+                    <p>HTML, CSS, JS, JQuery</p></div>
+                <img src="./assets/images/composer_quiz.JPG">
                 </a>
             </article>
-            <article class="card">
-                <a href="https://abrowncownow.github.io/prework-study-guide/">
-                <div><h3>Prework Study Guide</h3>
-                    <p>HTML & CSS</p></div>
-                <img src="./assets/images/prework_ss.JPG">
-                </a>
-            </article>
+
             <article class="card">
                 <a href="https://abrowncownow.github.io/RPS/">
                 <div><h3>Rock Paper Scissors</h3>
@@ -61,10 +55,24 @@
                 </a>
             </article>
             <article class="card">
+                <a href="https://abrowncownow.github.io/prework-study-guide/">
+                <div><h3>Prework Study Guide</h3>
+                    <p>HTML & CSS</p></div>
+                <img src="./assets/images/prework_ss.JPG">
+            </article>
+                </a>
+            <article class="card">
                 <a href="https://abrowncownow.github.io/pass-gen/">
                 <div><h3>Password Generator</h3>
                     <p>Javascript</p></div>
                 <img src="./assets/images/passgen.JPG">
+                </a>
+            </article>
+            <article class="card">
+                <a href="https://github.com/abrowncownow/horiseon-code-refactor">
+                <div><h3>Horiseon Refactor</h3>
+                    <p>HTML & CSS</p></div>
+                <img src="./assets/images/horiseon_ss.JPG">
                 </a>
             </article>
             <article class="card">
